# gameoff-text-adventure

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  throwback-text-adventure.sln
Debug/: throwback-text-adventure.ilk
include/: Game.h  GameObject.h  Room.h
ipch/THROWBACK-TEXT-ADVENTURE-66c3c606/: THROWBACK-TEXT-ADVENTURE-35db605e.ipch
src/: GameObject.cpp  Player.cpp  Room.cpp  throwback-text-adventure.cpp
throwback-text-adventure/: GameEvent.cpp  GameEvent.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Room.cpp  Room.h  stdafx.cpp  stdafx.h  throwback-text-adventure.cpp  throwback-text-adventure.vcxproj  throwback-text-adventure.vcxproj.filters
throwback-text-adventure/Debug/: vc140.idb
throwback-text-adventure/Debug/throwbac.08DA6872.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  throwback-text-adventure.lastbuildstate
